--- a/germax-frontend/src/templates/components/content-page-admin-reservation-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-admin-reservation-management/index.html
@@ -480,79 +480,109 @@
 	</div>
 </div>
 
-
-<!-- list of conflicts -->
 <div class="container mt-4">
-    <h2>Derniers Conflits Détectés</h2>
-    <div class="table-responsive">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th data-column="idRapport" data-type="number">ID Rapport<button class="btn btn-link p-0 border-0 sortButton"><i class="fas fa-sort"></i></button></th>
-                    <th data-column="typeDeRapport" data-type="text">Type de Rapport<button class="btn btn-link p-0 border-0 sortButton"><i class="fas fa-sort"></i></button></th>
-                    <th data-column="status" data-type="text">Status<button class="btn btn-link p-0 border-0 sortButton"><i class="fas fa-sort"></i></button></th>
-                    <th data-column="dateDeclaration" data-type="date">Date de Déclaration<button class="btn btn-link p-0 border-0 sortButton"><i class="fas fa-sort"></i></button></th>
-                    <th data-column="dateRamassage" data-type="date">Date de Ramassage<button class="btn btn-link p-0 border-0 sortButton"><i class="fas fa-sort"></i></button></th>
-                    <th>Description</th>
-                    <th data-column="idUtilisateur" data-type="number">ID Utilisateur<button class="btn btn-link p-0 border-0 sortButton"><i class="fas fa-sort"></i></button></th>
-                    <th data-column="idPret" data-type="number">ID Prêt<button class="btn btn-link p-0 border-0 sortButton"><i class="fas fa-sort"></i></button></th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr data-id-rapport="1" data-type-de-rapport="Utilisation d'Équipement" data-status="Actif" data-date-declaration="2023-04-12" data-date-ramassage="2023-04-15" data-id-utilisateur="2" data-id-pret="5">
-                    <td>1</td>
-                    <td>Utilisation d'Équipement</td>
-                    <td>Actif</td>
-                    <td>2023-04-12</td>
-                    <td>2023-04-15</td>
-                    <td>Chevauchement des Réservations</td>
-                    <td>2</td>
-                    <td>5</td>
-                    <td>
-                        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#resolveConflictModal">Résoudre</button>
-                    </td>
-                </tr>
-                <tr data-id-rapport="2" data-type-de-rapport="Utilisation d'Équipement" data-status="Actif" data-date-declaration="2023-04-12" data-date-ramassage="2023-04-15" data-id-utilisateur="3" data-id-pret="6">
-                    <td>2</td>
-                    <td>Utilisation d'Équipement</td>
-                    <td>Actif</td>
-                    <td>2023-04-12</td>
-                    <td>2023-04-15</td>
-                    <td>Дépassement de la limite d'utilisation</td>
-                    <td>3</td>
-                    <td>6</td>
-                    <td>
-                        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#resolveConflictModal-2">Résoudre</button>
-                    </td>
-                </tr>
-                <tr data-id-rapport="3" data-type-de-rapport="Utilisation d'Équipement" data-status="Inactif" data-date-declaration="2023-05-20" data-date-ramassage="2023-05-22" data-id-utilisateur="4" data-id-pret="7">
-                    <td>3</td>
-                    <td>Utilisation d'Équipement</td>
-                    <td>Inactif</td>
-                    <td>2023-05-20</td>
-                    <td>2023-05-22</td>
-                    <td>Non-respect des exigences d'utilisation</td>
-                    <td>4</td>
-                    <td>7</td>
-                    <td>
-                        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#resolveConflictModal-3">Résoudre</button>
-                    </td>
-                </tr>
-                <tr data-id-rapport="4" data-type-de-rapport="Utilisation d'Équipement" data-status="En attente" data-date-declaration="2023-06-01" data-date-ramassage="2023-06-03" data-id-utilisateur="5" data-id-pret="8">
-                    <td>4</td>
-                    <td>Utilisation d'Équipement</td>
-                    <td>En attente</td>
-                    <td>2023-06-01</td>
-                    <td>2023-06-03</td>
-                    <td>Retard dans le retour du matériel</td>
-                    <td>5</td>
-                    <td>8</td>
-                    <td>
-                        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#resolveConflictModal-4">Résoudre</button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+    <!-- Вкладки для переключения между активными и завершенными резервациями -->
+    <div class="nav nav-tabs" id="reservationTabs" role="tablist">
+        <a class="nav-link active" id="active-reservations-tab" data-bs-toggle="tab" href="#activeReservations"
+            role="tab" aria-controls="activeReservations" aria-selected="true">Réservations actives</a>
+        <a class="nav-link" id="completed-reservations-tab" data-bs-toggle="tab" href="#completedReservations"
+            role="tab" aria-controls="completedReservations" aria-selected="false">Réservations archivées</a>
+    </div>
+
+    <!-- Содержимое вкладок -->
+    <div class="tab-content" id="reservationTabsContent">
+        <!-- Вкладка Активные резервации -->
+        <div class="tab-pane fade show active" id="activeReservations" role="tabpanel"
+            aria-labelledby="active-reservations-tab">
+            <h2>Derniers Conflits Détectés</h2>
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+						<tr>
+							<th data-column="idRapport" data-type="number">ID Rapport<button class="btn btn-link p-0 border-0 sortButton"><i class="fas fa-sort"></i></button></th>
+							<th data-column="typeDeRapport" data-type="text">Type de Rapport<button class="btn btn-link p-0 border-0 sortButton"><i class="fas fa-sort"></i></button></th>
+							<th data-column="status" data-type="text">Status<button class="btn btn-link p-0 border-0 sortButton"><i class="fas fa-sort"></i></button></th>
+							<th data-column="dateDeclaration" data-type="date">Date de Déclaration<button class="btn btn-link p-0 border-0 sortButton"><i class="fas fa-sort"></i></button></th>
+							<th data-column="dateRamassage" data-type="date">Date de Ramassage<button class="btn btn-link p-0 border-0 sortButton"><i class="fas fa-sort"></i></button></th>
+							<th>Description</th>
+							<th data-column="idUtilisateur" data-type="number">ID Utilisateur<button class="btn btn-link p-0 border-0 sortButton"><i class="fas fa-sort"></i></button></th>
+							<th data-column="idPret" data-type="number">ID Prêt<button class="btn btn-link p-0 border-0 sortButton"><i class="fas fa-sort"></i></button></th>
+							<th>Actions</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr data-id-rapport="1" data-type-de-rapport="Utilisation d'Équipement" data-status="Actif" data-date-declaration="2023-04-12" data-date-ramassage="2023-04-15" data-id-utilisateur="2" data-id-pret="5">
+							<td>1</td>
+							<td>Utilisation d'Équipement</td>
+							<td>Actif</td>
+							<td>2023-04-12</td>
+							<td>2023-04-15</td>
+							<td>Chevauchement des Réservations</td>
+							<td>2</td>
+							<td>5</td>
+							<td>
+								<button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#resolveConflictModal">Résoudre</button>
+							</td>
+						</tr>
+						<tr data-id-rapport="2" data-type-de-rapport="Utilisation d'Équipement" data-status="Actif" data-date-declaration="2023-04-12" data-date-ramassage="2023-04-15" data-id-utilisateur="3" data-id-pret="6">
+							<td>2</td>
+							<td>Utilisation d'Équipement</td>
+							<td>Actif</td>
+							<td>2023-04-12</td>
+							<td>2023-04-15</td>
+							<td>Дépassement de la limite d'utilisation</td>
+							<td>3</td>
+							<td>6</td>
+							<td>
+								<button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#resolveConflictModal-2">Résoudre</button>
+							</td>
+						</tr>
+						<tr data-id-rapport="3" data-type-de-rapport="Utilisation d'Équipement" data-status="Inactif" data-date-declaration="2023-05-20" data-date-ramassage="2023-05-22" data-id-utilisateur="4" data-id-pret="7">
+							<td>3</td>
+							<td>Utilisation d'Équipement</td>
+							<td>Inactif</td>
+							<td>2023-05-20</td>
+							<td>2023-05-22</td>
+							<td>Non-respect des exigences d'utilisation</td>
+							<td>4</td>
+							<td>7</td>
+							<td>
+								<button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#resolveConflictModal-3">Résoudre</button>
+							</td>
+						</tr>
+						<tr data-id-rapport="4" data-type-de-rapport="Utilisation d'Équipement" data-status="En attente" data-date-declaration="2023-06-01" data-date-ramassage="2023-06-03" data-id-utilisateur="5" data-id-pret="8">
+							<td>4</td>
+							<td>Utilisation d'Équipement</td>
+							<td>En attente</td>
+							<td>2023-06-01</td>
+							<td>2023-06-03</td>
+							<td>Retard dans le retour du matériel</td>
+							<td>5</td>
+							<td>8</td>
+							<td>
+								<button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#resolveConflictModal-4">Résoudre</button>
+							</td>
+						</tr>
+					</tbody>
+                </table>
+            </div>
+        </div>
+
+        <!-- Вкладка Завершенные резервации -->
+        <div class="tab-pane fade" id="completedReservations" role="tabpanel"
+            aria-labelledby="completed-reservations-tab">
+            <h2>Conflits Résolus</h2>
+            <div class="table-responsive">
+                <table class="table">
+                    <!-- Сюда можно вставить разметку для таблицы с архивированными резервациями, если у вас она есть -->
+                    <thead>
+                        <!-- Можете скопировать и модифицировать thead из активных резерваций, если структура таблицы похожа -->
+                    </thead>
+                    <tbody>
+                        <!-- Заполните данными об архивированных резервациях -->
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 </div>
