убрал клонирование. теперь перенос в архив и обратно работает для таблицы с резервациями.

--- a/germax-frontend/src/templates/components/content-page-admin-reservation-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-admin-reservation-management/index.html
@@ -627,11 +627,11 @@
 			</div>
 		</div>
 
-		<!-- Вкладка Завершенные резервации -->
+		<!-- Вкладка Завершенные конфликты -->
 		<div class="tab-pane fade" id="resolvedConflicts" role="tabpanel" aria-labelledby="resolved-conflicts-tab">
 			<h2>Conflits Résolus</h2>
 			<div class="table-responsive">
-				<table class="table">
+				<table class="table" id="resolvedConflictsTable">
 					<!-- Сюда можно вставить разметку для таблицы с архивированными резервациями, если у вас она есть -->
 					<thead>
 						<th data-column="idRapport" data-type="number">ID Rapport<button
