подключил local storage для учета состояния. осталось модифицировать чтобы во вкладке архива отображались все данные

--- a/germax-frontend/src/templates/components/content-page-admin-reservation-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-admin-reservation-management/index.html
@@ -247,7 +247,7 @@
 			<div class="table-responsive">
 				<table class="table" id="completedReservationsTable">
 					<thead>
-						<tr class="rowToRestore" data-id="rowToRestore-1">
+						<tr class="rowToRestore">
 							<th data-column="id" data-type="number">ID Réservation</th>
 							<th data-column="user" data-type="text">Utilisateur</th>
 							<th data-column="equipment" data-type="text">Équipement</th>
